tests/testing_data/anonymized_testing_data/invalid_data/invalid_fields/invalidPixelBW.dcm
version https://git-lfs.github.com/spec/v1
oid sha256:3b8e0aeef562ef0140abd6f5482d097bb5a3f0f1eee67fc4a3df47b0763a1d34
size 64868
